<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context="com.example.fragmenttest.MainActivity" >
    
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:checkedButton="@+id/radio0"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.00"
            android:background="@drawable/radio_pressed"
            android:button="@null"
            android:drawableTop="@drawable/home"
            android:gravity="center_horizontal"
            android:text="@string/home"
            android:textColor="@drawable/bottomtab_text"
            android:textSize="12dp" />

        <RadioButton
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_pressed"
            android:button="@null"
            android:drawableTop="@drawable/cart"
            android:gravity="center_horizontal"
            android:text="@string/shoppingcart"
            android:textColor="@drawable/bottomtab_text"
            android:textSize="12dp" />
        
        <RadioButton
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_pressed"
            android:button="@null"
            android:drawableTop="@drawable/profile"
            android:gravity="center_horizontal"
            android:text="@string/mine"
            android:textColor="@drawable/bottomtab_text"
            android:textSize="12dp" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/radioGroup1"
        android:layout_alignParentLeft="true"
        android:background="#A3A3A3" />

</RelativeLayout>